# MandelVrot

./: CMakeLists.txt  README.md
src/: benchmark.cpp  gui.cpp  main.cpp
src/PixMap/: PixMap.hpp
src/mandelvrot/: include.hpp
src/mandelvrot/src/: adaptive.cpp  avx.cpp  stupid.cpp
